# iced-moving-picture

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  tasks.py
.github/workflows/: main.yaml
example/: Cargo.toml
example/src/: main.rs
examples/apng/: Cargo.toml
examples/apng/src/: main.rs
examples/gif/: Cargo.toml
examples/gif/src/: main.rs
src/: lib.rs  widget.rs
src/widget/: apng.rs  gif.rs
