[package]
name = "iced_moving_picture"
version = "0.2.0"
edition = "2021"
authors = ["mtkennerly <mtkennerly@gmail.com>", "tarkah <admin@tarkah.dev>"]
description = "Animated image widgets for Iced"
license = "MIT"
repository = "https://github.com/mtkennerly/iced-moving-picture"

[workspace]
members = [
  ".",
  "examples/*",
]

[workspace.lints.rust]
mismatched_lifetime_syntaxes = "allow"

[features]
default = ["async-fs"]
tokio = ["dep:tokio"]

[lints]
workspace = true

[dependencies]
async-fs = { version = "1.6", optional = true }
iced_futures = "0.14"
iced_runtime = "0.14"
iced_widget = { version = "0.14", features = ["image"] }
image = { version = "0.24", features = ["gif"] }
thiserror = "1.0"
tokio = { version = "1", optional = true, features = ["fs", "io-util"] }
